[package]
name = "example-api"
version = "0.1.0"
edition = "2024"

[dependencies]
handler.workspace = true
axum.workspace = true
tokio.workspace = true

[workspace]
members = ["handler", "driver"]

[workspace.dependencies]
handler = { path = "handler" }
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
